--- a/UIWPF/MainWindow.xaml
+++ b/UIWPF/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="UIWPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:UIWPF" mc:Ignorable="d" Title="MainWindow" Height="700" WindowStartupLocation="CenterScreen" Width="1000" Background="#444444" PreviewKeyDown="MainWindow_OnPreviewKeyDown">
+﻿<Window x:Class="UIWPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:UIWPF" mc:Ignorable="d" Title="MainWindow" Height="700" WindowStartupLocation="CenterScreen" Width="1000" Background="#444444" PreviewKeyDown="MainWindow_OnPreviewKeyDown" Name="MainFormWindow" Closing="MainWindow_OnClosing">
   <Window.Resources>
     <Style TargetType="DataGridColumnHeader">
       <Setter Property="Background" Value="#000000"></Setter>
@@ -81,6 +81,9 @@
         <MenuItem Header="Move _Down" Click="MoveWallClick2"></MenuItem>
         <MenuItem Header="_Split" Click="SplitWallClick"></MenuItem>
         <MenuItem Header="Switch _Room" Click="SwitchRoomClick"></MenuItem>
+      </MenuItem>
+      <MenuItem Name="_Tools" Header="Tools">
+        <MenuItem Header="_Save state" Click="SaveStateClick"></MenuItem>
       </MenuItem>
     </Menu>
     <Grid>
