--- a/UIWPF/MainWindow.xaml
+++ b/UIWPF/MainWindow.xaml
@@ -28,7 +28,7 @@
     </Style>
     <Style x:Key='darkRow' TargetType="{x:Type DataGridRow}">
       <Setter Property="Foreground" Value="#FFFFFF" />
-      <Setter Property="Height" Value="35" />
+      <Setter Property="Height" Value="60" />
       <Setter Property="HorizontalContentAlignment" Value="Stretch" />
       <Setter Property="Template" Value="{DynamicResource DataGridRowControlTemplate1}" />
       <Style.Triggers>
@@ -121,7 +121,7 @@
 
           </TabItem>
           <TabItem Name="RoomGridItem" Header="RoomGrid">
-            <DataGrid Name="RoomGrid" ItemsSource="{Binding Rooms, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False" RowStyle="{StaticResource darkRow}" Style="{StaticResource DarkGrid}">
+            <DataGrid Name="RoomGrid" ItemsSource="{Binding Rooms, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False" RowStyle="{StaticResource darkRow}" Style="{StaticResource DarkGrid}" MinRowHeight="60">
               <DataGrid.Columns>
                 <DataGridTemplateColumn Header="Name" Width="65">
                   <DataGridTemplateColumn.CellTemplate>
