--- a/UIWPF/MainWindow.xaml
+++ b/UIWPF/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="UIWPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:UIWPF" mc:Ignorable="d" Title="MainWindow" Height="700" WindowStartupLocation="CenterScreen" Width="1000" Background="#444444" PreviewKeyDown="MainWindow_OnPreviewKeyDown" Name="MainFormWindow" Closing="MainWindow_OnClosing">
+﻿<Window x:Class="UIWPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:UIWPF" mc:Ignorable="d" Title="MainWindow" Height="1100" WindowStartupLocation="CenterOwner" Width="1600" Background="#444444" PreviewKeyDown="MainWindow_OnPreviewKeyDown" Name="MainFormWindow" Closing="MainWindow_OnClosing">
   <Window.Resources>
     <Style TargetType="DataGridColumnHeader">
       <Setter Property="Background" Value="#000000"></Setter>
@@ -21,14 +21,14 @@
     <Style x:Key='DarkGrid' TargetType="DataGrid">
       <Setter Property="Foreground" Value="#FFFFFF" />
       <Setter Property="Background" Value="#000000" />
-      <Setter Property="MinRowHeight" Value="30" />
+      <Setter Property="MinRowHeight" Value="50" />
       <Setter Property="MinHeight" Value="250" />
-      <Setter Property="MaxHeight" Value="400" />
+      <Setter Property="MaxHeight" Value="700" />
       <Setter Property="ColumnHeaderStyle" Value="{StaticResource {x:Type DataGridColumnHeader}}"></Setter>
     </Style>
     <Style x:Key='darkRow' TargetType="{x:Type DataGridRow}">
       <Setter Property="Foreground" Value="#FFFFFF" />
-      <Setter Property="Height" Value="60" />
+      <Setter Property="Height" Value="90" />
       <Setter Property="HorizontalContentAlignment" Value="Stretch" />
       <Setter Property="Template" Value="{DynamicResource DataGridRowControlTemplate1}" />
       <Style.Triggers>
@@ -89,7 +89,7 @@
     </Menu>
     <Grid>
       <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="500" />
+        <ColumnDefinition Width="800" />
         <ColumnDefinition Width="300*" />
       </Grid.ColumnDefinitions>
       <Grid.RowDefinitions>
@@ -102,10 +102,10 @@
         <Button Content="Split" Click="SplitWallClick"></Button>
       </WrapPanel>
       <ScrollViewer Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-        <Canvas Name="testcanvas" RenderTransformOrigin="0.5,0.4">
+        <Canvas Name="testcanvas" RenderTransformOrigin="0.9,0.3">
           <Canvas.RenderTransform>
             <TransformGroup>
-              <ScaleTransform ScaleY="-0.5" ScaleX="0.5" />
+              <ScaleTransform ScaleY="-0.4" ScaleX="0.4" />
             </TransformGroup>
           </Canvas.RenderTransform>
         </Canvas>
@@ -114,7 +114,7 @@
       <StackPanel Grid.Row="0" Grid.Column="1" Margin="10" Grid.RowSpan="2">
       
 
-        <TabControl MinHeight="300">
+        <TabControl MinHeight="700">
 
           <TabItem Name="PointGridItem" Header="Points">
             <DataGrid Name="PointGrid" ItemsSource="{Binding Points, IsAsync=True, Mode=OneWay}" RowStyle="{StaticResource darkRow}" Style="{StaticResource DarkGrid}" />
@@ -164,7 +164,7 @@
         <TabControl MinHeight="300">
           <TabItem Header="costgrid">
 
-            <DataGrid x:Name="CostGrid" ItemsSource="{Binding SimulationCosts, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False" VerticalScrollBarVisibility="Visible" MaxHeight='280' SelectionChanged='CostGrid_SelectionChanged' MouseDoubleClick="CostGrid_OnMouseDoubleClick" Height='200' Margin='0,0,0,0' RowStyle="{StaticResource darkRow}">
+            <DataGrid x:Name="CostGrid" ItemsSource="{Binding SimulationCosts, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False" VerticalScrollBarVisibility="Visible" MaxHeight='500' SelectionChanged='CostGrid_SelectionChanged' MouseDoubleClick="CostGrid_OnMouseDoubleClick" Height='400' Margin='0,0,0,0' RowStyle="{StaticResource darkRow}" Style="{StaticResource DarkGrid}">
               <DataGrid.Columns>
                 <DataGridTemplateColumn Header="Index" Width="40">
                   <DataGridTemplateColumn.CellTemplate>
