--- a/UIWPF/MainWindow.xaml
+++ b/UIWPF/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="UIWPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:UIWPF" mc:Ignorable="d" Title="MainWindow" Height="1100" WindowStartupLocation="CenterOwner" Width="1600" Background="#444444" PreviewKeyDown="MainWindow_OnPreviewKeyDown" Name="MainFormWindow" Closing="MainWindow_OnClosing">
+﻿<Window x:Class="UIWPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:UIWPF" mc:Ignorable="d" Title="MainWindow" Height="1000" WindowStartupLocation="CenterScreen" Width="1600" Background="#444444" PreviewKeyDown="MainWindow_OnPreviewKeyDown" Name="MainFormWindow" Closing="MainWindow_OnClosing">
   <Window.Resources>
     <Style TargetType="DataGridColumnHeader">
       <Setter Property="Background" Value="#000000"></Setter>
@@ -105,7 +105,7 @@
         <Canvas Name="testcanvas" RenderTransformOrigin="0.9,0.3">
           <Canvas.RenderTransform>
             <TransformGroup>
-              <ScaleTransform ScaleY="-0.4" ScaleX="0.4" />
+              <ScaleTransform ScaleY="-0.8" ScaleX="0.8" />
             </TransformGroup>
           </Canvas.RenderTransform>
         </Canvas>
@@ -117,7 +117,7 @@
         <TabControl MinHeight="700">
 
           <TabItem Name="PointGridItem" Header="Points">
-            <DataGrid Name="PointGrid" ItemsSource="{Binding Points, IsAsync=True, Mode=OneWay}" RowStyle="{StaticResource darkRow}" Style="{StaticResource DarkGrid}" />
+            <DataGrid Name="PointGrid" ItemsSource="{Binding Points, IsAsync=True, Mode=OneWay}" RowStyle="{StaticResource darkRow}" Style="{StaticResource DarkGrid}" SelectionChanged='PointGrid_SelectionChanged' />
 
           </TabItem>
           <TabItem Name="RoomGridItem" Header="RoomGrid">
