--- a/UIWPF/MainWindow.xaml
+++ b/UIWPF/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="UIWPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:UIWPF" mc:Ignorable="d" Title="MainWindow" Height="1000" WindowStartupLocation="CenterScreen" Width="1600" Background="#444444" PreviewKeyDown="MainWindow_OnPreviewKeyDown" Name="MainFormWindow" Closing="MainWindow_OnClosing">
+﻿<Window x:Class="UIWPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:UIWPF" mc:Ignorable="d" Title="MainWindow" Height="900" WindowStartupLocation="CenterScreen" Width="1400" Background="#444444" PreviewKeyDown="MainWindow_OnPreviewKeyDown" Name="MainFormWindow" Closing="MainWindow_OnClosing">
   <Window.Resources>
     <Style TargetType="DataGridColumnHeader">
       <Setter Property="Background" Value="#000000"></Setter>
@@ -73,6 +73,7 @@
         <MenuItem Header="_Load Skewed model" Click="LoadSkewedModelClick"></MenuItem>
         <MenuItem Header="_Load Advanced model" Click="LoadAdvancedModelClick"></MenuItem>
         <MenuItem Header="_Load Factory model" Click="LoadFactoryModelClick"></MenuItem>
+        <MenuItem Header="_Load Test model" Click="LoadTestModelClick"></MenuItem>
         <MenuItem Header="_Load selected state" Click="LoadSelectedClick"></MenuItem>
         <MenuItem Header="_Stop simulation" Click="StopClick"></MenuItem>
 
@@ -81,7 +82,7 @@
         <MenuItem Header="Move _Up" Click="MoveWallClick"></MenuItem>
         <MenuItem Header="Move _Down" Click="MoveWallClick2"></MenuItem>
         <MenuItem Header="_Split" Click="SplitWallClick"></MenuItem>
-        <MenuItem Header="Switch _Room" Click="SwitchRoomClick"></MenuItem>
+        <MenuItem Header="Switch _MyRoom" Click="SwitchRoomClick"></MenuItem>
       </MenuItem>
       <MenuItem Name="_Tools" Header="Tools">
         <MenuItem Header="_Save state" Click="SaveStateClick"></MenuItem>
@@ -120,8 +121,8 @@
             <DataGrid Name="PointGrid" ItemsSource="{Binding Points, IsAsync=True, Mode=OneWay}" RowStyle="{StaticResource darkRow}" Style="{StaticResource DarkGrid}" SelectionChanged='PointGrid_SelectionChanged' />
 
           </TabItem>
-          <TabItem Name="RoomGridItem" Header="RoomGrid">
-            <DataGrid Name="RoomGrid" ItemsSource="{Binding Rooms, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False" RowStyle="{StaticResource darkRow}" Style="{StaticResource DarkGrid}" MinRowHeight="60">
+          <TabItem Name="MyRoomGridItem" Header="MyRoomGrid">
+            <DataGrid Name="MyRoomGrid" ItemsSource="{Binding Rooms, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False" RowStyle="{StaticResource darkRow}" Style="{StaticResource DarkGrid}" MinRowHeight="60">
               <DataGrid.Columns>
                 <DataGridTemplateColumn Header="Name" Width="65">
                   <DataGridTemplateColumn.CellTemplate>
@@ -153,8 +154,8 @@
             </DataGrid>
 
           </TabItem>
-          <TabItem Name="RoomTypes" Header="RoomTypes">
-            <DataGrid Name="RoomTypesGrid" ItemsSource="{Binding roomtypes, IsAsync=True, Mode=OneWay}" RowStyle="{StaticResource darkRow}" Style="{StaticResource DarkGrid}">
+          <TabItem Name="MyRoomTypes" Header="MyRoomTypes">
+            <DataGrid Name="MyRoomTypesGrid" ItemsSource="{Binding roomtypes, IsAsync=True, Mode=OneWay}" RowStyle="{StaticResource darkRow}" Style="{StaticResource DarkGrid}">
 
             </DataGrid>
 
