--- a/Diploma2/MainWindow.xaml
+++ b/Diploma2/MainWindow.xaml
@@ -6,7 +6,18 @@
         xmlns:local="clr-namespace:Diploma2"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+    <DockPanel >
+        <StatusBar DockPanel.Dock="Bottom" Height="20">
+          <Label Height="15"
+                 Content="{Binding StatusMessage, Mode=OneWay, IsAsync=True, UpdateSourceTrigger=PropertyChanged}"></Label>
+    </StatusBar>
+      <TabControl>
+        <TabItem Header='Graphics' 
+                 Name ='Graphics'>
+          <Grid></Grid>
+        </TabItem>
+      <TabItem Header='Data'
+               Name='Data'></TabItem>
+      </TabControl>
+    </DockPanel>
 </Window>
