move is almost perfectly working

--- a/Diploma2/MainWindow.xaml
+++ b/Diploma2/MainWindow.xaml
@@ -49,9 +49,9 @@
                     Name="MoveLine"
                     Click="MoveLine_OnClick"
                     Height="50"></Button>
-            <Button Content="Paint"
-                    Name="PaintCanvas"
-                    Click="Paint_OnClick"
+            <Button Content="generate tests"
+                    Name="gentest"
+                    Click="Gentest_OnClick"
                     Height="50"></Button>
             <Button Content="Exit"
                     Name="Exit"
@@ -247,7 +247,7 @@ SelectedCellsChanged="LineGrid_OnSelectedCellsChanged"
               <DataGrid  Name="RoomGrid"
                          ItemsSource="{Binding Rooms, IsAsync=True, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                          HorizontalAlignment="Stretch"
-                         Height="300"
+                         Height="400"
                          AutoGenerateColumns="False"
                          SelectionUnit="FullRow"
                          SelectedCellsChanged="RoomGrid_OnSelectedCellsChanged"
